# mliti

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  test.cpp
src/include/: ast.hpp  parsing.hpp  simplifier.hpp  truth_table.hpp  utils.hpp
tests/: tests_main.cpp
